Agrega tema inherit a herencia-cascada.css

--- a/1.- Introduccion a CSS/index.html
+++ b/1.- Introduccion a CSS/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="estilos-navegador.css">
+    <link rel="stylesheet" href="herencia-cascada.css">
     <!--<style>-->
         <!--body{-->
             <!--background: red;-->
@@ -38,6 +38,13 @@
         <li><a class="menu__link level-1" href="#">Item</a>
 
     </ul>
+
+    <p>Probando el inherit</p>
+    <ol>
+        <li><a href="#">Item</a></li>
+        <li><a href="#">Item</a></li>
+        <li><a href="#">Item</a></li>
+    </ol>
 
 </body>
 </html>
